// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly absolute links using HTML 1`] = `
<span
  className="jsx-3168189516"
>
  <a
    className="jsx-3168189516 "
    href="https://nomadlist.com/@mrtnzlml"
  />
</span>
`;

exports[`renders correctly absolute links using HTML 2`] = `
<span
  className="jsx-3168189516"
>
  <a
    className="jsx-3168189516 "
    href="https://twitter.com/mrtnzlml"
  />
</span>
`;

exports[`renders correctly relative links using Next.js 1`] = `
<span
  className="jsx-3168189516"
>
  <a
    className="jsx-3168189516"
    href="/about"
    onClick={[Function]}
  />
</span>
`;

exports[`renders correctly relative links using Next.js 2`] = `
<span
  className="jsx-3168189516"
>
  <a
    className="jsx-3168189516"
    href="archive"
    onClick={[Function]}
  />
</span>
`;
